# tokkatot_ai

./: .gitignore  DOCUMENTATION_SUMMARY.md  MODEL_CARD_DenseNet121.md  MODEL_CARD_ENSEMBLE.md  MODEL_CARD_EfficientNetB0.md  README.md  check_checkpoint.py  check_gpu.py  data_utils.py  evaluate.py  inference.py  main.py  models.py  pyproject.toml  setup_check.py  train.py
outputs/logs/DenseNet121/20260116-144140/: events.out.tfevents.1768549300.KiloTgunPC.22612.1
outputs/logs/EfficientNetB0/20260114-120513/: events.out.tfevents.1768367113.KiloTgunPC.22612.0
