[project]
name = "tokkatot-ai"
version = "0.1.0"
description = "Safety-First Ensemble AI for Chicken Disease Detection via Fecal Images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "train", "inference", "models", "data_utils", "evaluate", "setup_check", "check_gpu", "check_checkpoint"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
